all images added

--- a/carddesign.html
+++ b/carddesign.html
@@ -8,6 +8,141 @@
       justify-content: space-evenly;
       background-color: rgb(229, 226, 226);
     }
-    </style>
-    </body>
+    .item {
+height: 380px;
+width: 300px;
+padding: 10px;
+margin: 5px auto;
+border: 1px solid rgb(206, 203, 203);
+border-radius: 10px;
+background-color: white;
+      }
+      .item-hover{
+        border: solid rgb(206, 203, 203);
+      }
+     .main-img{
+        border-radius: 10px 10px 0px 0px;
+        margin-bottom: 5px;
+     }
+     .project-heading{
+      font-size: 23px;
+      font-weight: 600;
+      font-family:cursive;
+     }
+     .sub-container{
+      padding-left: 10px;
+      padding-right: 10px;
+
+     }
+     .course-name{
+      background-color: rgb(72, 180, 235);
+      padding top: 10px;
+     border-radius: 4px;
+     
+     }
+     .project-description{
+      font-size: 14px;
+      color: rgb(105,105,105);
+     }
+
+     .tech-stack{
+      display: flex;
+      gap:10px;
+      margin-top: 10px;
+     }
+     .tech{
+      background-color: rgb(220,220,220);
+      padding:4px 20px;
+      border-radius: 20px;
+      margin-right: 10px;
+      font-size: 12px;
+     }
+     .project-duration{
+      display: flex;
+      justify-content:space-between;
+      font-size: 14px;
+      align-items: center;
+      margin: 10px;
+     }
+     .project-duration-sub-info{
+      display: flex;
+      align-items: center;
+      margin-right: 5px;
+     }
+     .project-duration-info{
+      display: flex;
+      align-items: center;}
+      .calendar-img{
+        margin-right: 5px;
+      }
+      .user-profile-img{
+        border-radius: 50%;
+        margin-right: 5px;
+      }
+      .hr-line{
+color: rgb(207, 206, 206);
+      margin: 20px 0px;
+      }
+      .additional{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 14px;
+      }
+      .additional-sub-info{
+      display: flex;
+        align-items: center;
+        font-size: 14px;
+      }
+      .additional-sub-info-2{
+        color: blue;
+cursor: pointer;
+font-weight: 500px;
+font-size: 14px;
+      }
+      </style>
+    </head>
+    <body>
+  <div class="contanier">
+  <div class="item">
+  <img src="image.png" width="300px"class="main-img"/>
+  <div class="sub-container">
+  <span class="project-heading"> Rode to code</span>
+  <br/>
+  <span class="course-name">Internship Cohort Program 6.0</span>
+  <p class="project-description">
+    This project serves as the foundationfor an e-commerce website speializing in the sale of eletronic gadgets with....
+  </p>
+  <div class="tech-stack">
+    <span class="tech">HTML</span>
+    <span class="tech">CSS</span>
+    <span class="tech">Github</span>
+  </div>
+  <div class="project-duration">
+
+    <div class="project-duration-sub-info">
+    <img src="c:\Users\Shobhit\Downloads\calendar-icon.6ca85236.svg"height="15px"class="calendar-img"/>
+    <span class="project-duration-info">Apr 2025-Apr 2026</span></div>
+    
+    <div class="project-duration-sub-info">
+    <img src="c:\Users\Shobhit\Downloads\237492790.jpeg"height="20px" class="user-profile-img">
+  <span class="project-duration-info">Raina Trivedi</span></div>
+    </div>
+<hr class="hr-line"/>
+    <div class="additional">
+      <div class="additional-sub-info">
+  <img src="deafult-clap-logo.47354508.svg"height="22px"style="margin-right: 5px;"/>
+  <span style="margin-right: 5px">123</span>
+    <img src="comment-story.4dd52157.svg"height="25px"style="margin-right: 5px;"/>
+  <span style="margin-right:10px">14</span>
+      <img src="share-logo.d24cfab1.svg"height="20px"/>
+</div>
+<div>
+<span class="additional-sub-info-2">see more    -></span>
+</div>
+</div>
+</div>
+  </div>
+  </div>
+  </body>
 </html>
